// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BumpNetworkFees renders correctly 1`] = `
<Screen
  header={<BumpNetworkFeesHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
    contentStyle={
      [
        {
          "gap": 12,
        },
        {
          "gap": 20,
        },
      ]
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <CurrentFee />
    <Divider />
    <FeeEstimates
      estimatedFees={
        {
          "economyFee": 1,
          "fastestFee": 1,
          "halfHourFee": 1,
          "hourFee": 1,
          "minimumFee": 1,
        }
      }
      isOverpaying={false}
      setFeeRate={[MockFunction]}
    />
    <Divider />
    <NewFee
      overpayingBy={0.5}
      setNewFeeRate={[MockFunction]}
    />
  </ForwardRef>
  <BumpNetworkFeesButton
    disabled={true}
    style={
      {
        "alignSelf": "center",
      }
    }
    transaction={
      {
        "fee": 202,
        "locktime": 0,
        "size": 206,
        "status": {
          "block_hash": "redacted1680",
          "block_height": 756530,
          "block_time": 1664622712,
          "confirmed": true,
        },
        "txid": "credacted",
        "value": 223667,
        "version": 1,
        "vin": [
          {
            "is_coinbase": false,
            "prevout": {
              "scriptpubkey": "5120redacted",
              "scriptpubkey_address": "bc1pnf32redacted",
              "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 9a62redacted",
              "scriptpubkey_type": "v1_p2tr",
              "value": 223667,
            },
            "scriptsig": "",
            "scriptsig_asm": "",
            "sequence": 4294967295,
            "txid": "bredacted",
            "vout": 0,
            "witness": [
              "0667redacted",
            ],
          },
        ],
        "vout": [
          {
            "scriptpubkey": "5120redacted",
            "scriptpubkey_address": "bc1p0w3vredacted",
            "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 7ba2redacted",
            "scriptpubkey_type": "v1_p2tr",
            "value": 173465,
          },
          {
            "scriptpubkey": "0020redacted",
            "scriptpubkey_address": "bc1qxukhredacted",
            "scriptpubkey_asm": "OP_0 OP_PUSHBYTES_32 372dredacted",
            "scriptpubkey_type": "v0_p2wsh",
            "value": 50000,
          },
        ],
        "weight": 617,
      }
    }
  />
</Screen>
`;

exports[`BumpNetworkFees renders correctly when new fee is invalid 1`] = `
<Screen
  header={<BumpNetworkFeesHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
    contentStyle={
      [
        {
          "gap": 12,
        },
        {
          "gap": 20,
        },
      ]
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <CurrentFee />
    <Divider />
    <FeeEstimates
      estimatedFees={
        {
          "economyFee": 1,
          "fastestFee": 1,
          "halfHourFee": 1,
          "hourFee": 1,
          "minimumFee": 1,
        }
      }
      isOverpaying={false}
      setFeeRate={[MockFunction]}
    />
    <Divider />
    <NewFee
      newFeeRate="1"
      overpayingBy={0.5}
      setNewFeeRate={[MockFunction]}
    />
  </ForwardRef>
  <BumpNetworkFeesButton
    disabled={true}
    newFeeRate="1"
    style={
      {
        "alignSelf": "center",
      }
    }
    transaction={
      {
        "fee": 202,
        "locktime": 0,
        "size": 206,
        "status": {
          "block_hash": "redacted1680",
          "block_height": 756530,
          "block_time": 1664622712,
          "confirmed": true,
        },
        "txid": "credacted",
        "value": 223667,
        "version": 1,
        "vin": [
          {
            "is_coinbase": false,
            "prevout": {
              "scriptpubkey": "5120redacted",
              "scriptpubkey_address": "bc1pnf32redacted",
              "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 9a62redacted",
              "scriptpubkey_type": "v1_p2tr",
              "value": 223667,
            },
            "scriptsig": "",
            "scriptsig_asm": "",
            "sequence": 4294967295,
            "txid": "bredacted",
            "vout": 0,
            "witness": [
              "0667redacted",
            ],
          },
        ],
        "vout": [
          {
            "scriptpubkey": "5120redacted",
            "scriptpubkey_address": "bc1p0w3vredacted",
            "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 7ba2redacted",
            "scriptpubkey_type": "v1_p2tr",
            "value": 173465,
          },
          {
            "scriptpubkey": "0020redacted",
            "scriptpubkey_address": "bc1qxukhredacted",
            "scriptpubkey_asm": "OP_0 OP_PUSHBYTES_32 372dredacted",
            "scriptpubkey_type": "v0_p2wsh",
            "value": 50000,
          },
        ],
        "weight": 617,
      }
    }
  />
</Screen>
`;

exports[`BumpNetworkFees renders correctly when new fee is valid 1`] = `
<Screen
  header={<BumpNetworkFeesHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
    contentStyle={
      [
        {
          "gap": 12,
        },
        {
          "gap": 20,
        },
      ]
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <CurrentFee />
    <Divider />
    <FeeEstimates
      estimatedFees={
        {
          "economyFee": 1,
          "fastestFee": 1,
          "halfHourFee": 1,
          "hourFee": 1,
          "minimumFee": 1,
        }
      }
      isOverpaying={false}
      setFeeRate={[MockFunction]}
    />
    <Divider />
    <NewFee
      newFeeRate="20"
      overpayingBy={0.5}
      setNewFeeRate={[MockFunction]}
    />
  </ForwardRef>
  <BumpNetworkFeesButton
    disabled={false}
    newFeeRate="20"
    style={
      {
        "alignSelf": "center",
      }
    }
    transaction={
      {
        "fee": 202,
        "locktime": 0,
        "size": 206,
        "status": {
          "block_hash": "redacted1680",
          "block_height": 756530,
          "block_time": 1664622712,
          "confirmed": true,
        },
        "txid": "credacted",
        "value": 223667,
        "version": 1,
        "vin": [
          {
            "is_coinbase": false,
            "prevout": {
              "scriptpubkey": "5120redacted",
              "scriptpubkey_address": "bc1pnf32redacted",
              "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 9a62redacted",
              "scriptpubkey_type": "v1_p2tr",
              "value": 223667,
            },
            "scriptsig": "",
            "scriptsig_asm": "",
            "sequence": 4294967295,
            "txid": "bredacted",
            "vout": 0,
            "witness": [
              "0667redacted",
            ],
          },
        ],
        "vout": [
          {
            "scriptpubkey": "5120redacted",
            "scriptpubkey_address": "bc1p0w3vredacted",
            "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 7ba2redacted",
            "scriptpubkey_type": "v1_p2tr",
            "value": 173465,
          },
          {
            "scriptpubkey": "0020redacted",
            "scriptpubkey_address": "bc1qxukhredacted",
            "scriptpubkey_asm": "OP_0 OP_PUSHBYTES_32 372dredacted",
            "scriptpubkey_type": "v0_p2wsh",
            "value": 50000,
          },
        ],
        "weight": 617,
      }
    }
  />
</Screen>
`;

exports[`BumpNetworkFees renders correctly when user would be overpaying by at least 100% 1`] = `
<Screen
  header={<BumpNetworkFeesHeader />}
>
  <ForwardRef
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      }
    }
    contentStyle={
      [
        {
          "gap": 12,
        },
        {
          "gap": 20,
        },
      ]
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <CurrentFee />
    <Divider />
    <FeeEstimates
      estimatedFees={
        {
          "economyFee": 1,
          "fastestFee": 1,
          "halfHourFee": 1,
          "hourFee": 1,
          "minimumFee": 1,
        }
      }
      isOverpaying={true}
      setFeeRate={[MockFunction]}
    />
    <Divider />
    <NewFee
      newFeeRate="3.93"
      overpayingBy={2}
      setNewFeeRate={[MockFunction]}
    />
  </ForwardRef>
  <BumpNetworkFeesButton
    disabled={false}
    newFeeRate="3.93"
    style={
      {
        "alignSelf": "center",
      }
    }
    transaction={
      {
        "fee": 202,
        "locktime": 0,
        "size": 206,
        "status": {
          "block_hash": "redacted1680",
          "block_height": 756530,
          "block_time": 1664622712,
          "confirmed": true,
        },
        "txid": "credacted",
        "value": 223667,
        "version": 1,
        "vin": [
          {
            "is_coinbase": false,
            "prevout": {
              "scriptpubkey": "5120redacted",
              "scriptpubkey_address": "bc1pnf32redacted",
              "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 9a62redacted",
              "scriptpubkey_type": "v1_p2tr",
              "value": 223667,
            },
            "scriptsig": "",
            "scriptsig_asm": "",
            "sequence": 4294967295,
            "txid": "bredacted",
            "vout": 0,
            "witness": [
              "0667redacted",
            ],
          },
        ],
        "vout": [
          {
            "scriptpubkey": "5120redacted",
            "scriptpubkey_address": "bc1p0w3vredacted",
            "scriptpubkey_asm": "OP_PUSHNUM_1 OP_PUSHBYTES_32 7ba2redacted",
            "scriptpubkey_type": "v1_p2tr",
            "value": 173465,
          },
          {
            "scriptpubkey": "0020redacted",
            "scriptpubkey_address": "bc1qxukhredacted",
            "scriptpubkey_asm": "OP_0 OP_PUSHBYTES_32 372dredacted",
            "scriptpubkey_type": "v0_p2wsh",
            "value": 50000,
          },
        ],
        "weight": 617,
      }
    }
  />
</Screen>
`;

exports[`BumpNetworkFees renders correctly while still loading 1`] = `<BitcoinLoading />`;
